--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
 	"name": "express",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.ts",
+	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node api/index.ts"
+		"start": "node server/index.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@vercel/postgres": "^0.7.2",
 		"dotenv": "^16.4.1",
 		"express": "^4.18.2"
 	}
