--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-	"name": "express",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node api/index.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"dotenv": "^16.4.1",
-		"express": "^4.18.2"
-	}
-}
+    "name": "express-vercel-deployment",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "node server"
+    },
+    "author": "Arpan Neupane",
+    "license": "ISC",
+    "dependencies": {
+      "express": "^4.21.2"
+    }
+  }
